added numbers and some minor changes

--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -30,11 +30,9 @@
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
     <icon density="ldpi" platform="android" src="www/lib/assets/ic_launcher-web.png" />
-    <splash density="land-ldpi" platform="android" src="www/lib/assets/ic_launcher-web.png" />
-    <icon density="ldpi" platform="ios" src="www/lib/assets/ic_launcher-web.png" />
-    <splash density="land-ldpi" platform="ios" src="www/lib/assets/ic_launcher-web.png" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
-    <preference name="DisallowOverscroll" value="true" />
+    <preference name="StatusBarOverlaysWebView" value="false" />
+    <preference name="StatusBarStyle" value="default" />
     <preference name="android-minSdkVersion" value="14" />
 </widget>
