update report view with text box, submit button, action sheet, and modal popups

--- a/platforms/android/assets/www/css/my-app.css
+++ b/platforms/android/assets/www/css/my-app.css
@@ -43,5 +43,15 @@ i.tabbar-demo-icon-4 {
   color: #007aff;
 }
 
+.item-inner {
+  color: #007aff;
+}
+
+textarea {
+  width: 100%;
+  height: 50vh;
+  resize: none;
+}
+
 
 
