Added code to upload media files to Cloudnairy when submitting a report, and now pulls valid regisrtation keys from the database to validate

--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -27,6 +27,9 @@
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="FileTransfer">
+        <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer" />
+    </feature>
     <name>Tip Line</name>
     <description>
         Tip Line Application for Airline Ambassadors.
